Bug 159714 - [Fetch API] Response should not become disturbed on the ReadableStream creation
Summary: [Fetch API] Response should not become disturbed on the ReadableStream creation
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords:
Depends on:
Blocks: 151937
  Show dependency treegraph
 
Reported: 2016-07-13 06:45 PDT by youenn fablet
Modified: 2016-07-13 09:09 PDT (History)
5 users (show)

See Also:


Attachments
Patch (9.65 KB, patch)
2016-07-13 07:03 PDT, youenn fablet
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2016-07-13 06:45:07 PDT
Response should become disturbed only when its stream is cancelled or a first read request is made.
Comment 1 youenn fablet 2016-07-13 07:03:22 PDT
Created attachment 283525 [details]
Patch
Comment 2 WebKit Commit Bot 2016-07-13 09:09:38 PDT
Comment on attachment 283525 [details]
Patch

Clearing flags on attachment: 283525

Committed r203162: <http://trac.webkit.org/changeset/203162>
Comment 3 WebKit Commit Bot 2016-07-13 09:09:42 PDT
All reviewed patches have been landed.  Closing bug.