[Fetch API] Response should not become disturbed on the ReadableStream creation https://bugs.webkit.org/show_bug.cgi?id=159714

Patch by Youenn Fablet <youenn@apple.com> on 2016-07-13
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/fetch/api/response/response-stream-disturbed-1-expected.txt:

Source/WebCore:

Covered by rebased test and existing tests.

* Modules/fetch/FetchResponse.cpp:
(WebCore::FetchResponse::stop): Making the response disturbed if cancelled.
* Modules/fetch/FetchResponseSource.cpp:
(WebCore::FetchResponseSource::firstReadCallback): Start enqueueing as soon as first read is made.
(WebCore::FetchResponseSource::doStart): Keep the start promise unresolved so that pull is not called.
FetchResponse is a push source.
* Modules/fetch/FetchResponseSource.h:
* Modules/streams/ReadableStreamInternals.js:
(readFromReadableStreamReader): Calling @firstReadCallback.
* Modules/streams/ReadableStreamSource.h:
(WebCore::ReadableStreamSource::firstReadCallback): Default implementation (does nothing).
* Modules/streams/ReadableStreamSource.idl: Adding firstReadCallback private method.
* bindings/js/WebCoreBuiltinNames.h: Adding @firstReadCallback.

Canonical link: https://commits.webkit.org/177862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203162 268f45cc-cd09-0410-ab3c-d52691b4dbfc